# pdf2jc

./: .gitignore  LICENSE  README.md  USAGE_SOP_CN.md  pyproject.toml
assets/: README.md
docs/: web_architecture.md
examples/sample_output/: README.md
pdf2jc_codex/: README.md  requirements.txt  theme.yaml
pdf2jc_codex/docs/: architecture.md
pdf2jc_codex/examples/sample_input/: README.md
pdf2jc_codex/src/: load_manual_figures.py
pdf2jc_codex/src/pdf2jc/: __init__.py  citation_mapper.py  cli.py  mock_data.py  narrative_builder.py  pipeline.py  slide_planner.py  validator.py
pdf2jc_codex/src/pdf2jc.egg-info/: SOURCES.txt  top_level.txt
pdf2jc_codex/tests/: test_citation_mapper.py
src/pdf2jc/: cli.py  narrative_builder.py  panel_detector.py  pdf_extractor.py  pptx_writer.py  presentation_builder.py  web.py
src/pdf2jc.egg-info/: PKG-INFO  entry_points.txt
