[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2jc"
version = "0.1.0"
description = "Reconstruct biomedical experimental narratives into editable journal club PowerPoint drafts."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "PDF2JC contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "PyMuPDF==1.26.1",
  "opencv-python-headless==4.10.0.84",
  "pydantic>=2.0",
]

[project.scripts]
pdf2jc = "pdf2jc.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["load_manual_figures"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
